# gallerymender

./: .clang-format  .gitignore  CMakeLists.txt  CMakePresets.json  build.gradle  settings.gradle
CMake/: FileHelpers.cmake
Source/: PCH.h
